--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,21 +20,24 @@
   <body>
 
     <div class="wrapper">
+
       <section>
         <div id="title">
           <h1>{{ site.title | default: site.github.repository_name }}</h1>
           <p>{{ site.description | default: site.github.project_tagline }}</p>
+          <div class="info-container">
+            <div class="location">Location: Hamar, Norway</div>
+            <div class="social-links">
+              <a href="https://www.linkedin.com/in/trond-fasteraune-9203bb33a/" target="_blank"><i class="fa-brands fa-linkedin"></i> LinkedIn</a>
+              <a href="https://bsky.app/profile/polartron.bsky.social" target="_blank"><i class="fa-brands fa-mastodon"></i> Bluesky</a>
+              <a href="https://github.com/polartron/" target="_blank"><i class="fa-brands fa-github"></i> GitHub</a>
+              <a href="https://www.youtube.com/@GameDevPolarTron" target="_blank"><i class="fa-brands fa-youtube"></i> YouTube</a>
+            </div>
+          </div>
           <hr>
-          <span class="credits left">Location: Hamar, Norway</span>
-        </div>
-        <div class="social-links">
-          <a href="https://www.linkedin.com/in/trond-fasteraune-9203bb33a/" target="_blank"><i class="fa-brands fa-linkedin"></i> LinkedIn</a>
-          <a href="https://bsky.app/profile/polartron.bsky.social" target="_blank"><i class="fa-brands fa-mastodon"></i> Bluesky</a>
-          <a href="https://github.com/polartron/" target="_blank"><i class="fa-brands fa-github"></i> GitHub</a>
-          <a href="https://www.youtube.com/@GameDevPolarTron" target="_blank"><i class="fa-brands fa-youtube"></i> YouTube</a>
-        </div>
-        {{ content }}
-      </section>
+          {{ content }}
+        </section>
+      </div>
     </div>
   </body>
 </html>
