--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -39,7 +39,7 @@
   color: #0A66C2; /* LinkedIn blue */
 }
 
-.social-links i.fa-mastodon {
+.social-links i.fa-bluesky {
   color: #3088d4; /* Mastodon blue */
 }
 
