--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
             <div class="location">Location: Hamar, Norway</div>
             <div class="social-links">
               <a href="https://www.linkedin.com/in/trond-fasteraune-9203bb33a/" target="_blank"><i class="fa-brands fa-linkedin"></i> LinkedIn</a>
-              <a href="https://bsky.app/profile/polartron.bsky.social" target="_blank"><i class="fa-brands fa-mastodon"></i> Bluesky</a>
+              <a href="https://bsky.app/profile/polartron.bsky.social" target="_blank"><i class="fa-brands fa-bluesky"></i> Bluesky</a>
               <a href="https://github.com/polartron/" target="_blank"><i class="fa-brands fa-github"></i> GitHub</a>
               <a href="https://www.youtube.com/@GameDevPolarTron" target="_blank"><i class="fa-brands fa-youtube"></i> YouTube</a>
             </div>
