--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
       <section>
         <div id="title">
           <h1>Trond Fasteraune</h1>
-          <img src="{{ '/images/trond.jpg' | relative_url }}" alt="Trond Fasteraune" class="avatar">
+          <img src="{{ '/assets/images/trond.jpg' | relative_url }}" alt="Trond Fasteraune" class="avatar">
           <p>Makes Video Games</p>
           <div class="info-container">
             <div class="location">Hamar, Norway</div>
