--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,6 +9,7 @@
   border-radius: 50%; /* Makes the image circular */
   margin: 10px 0; /* Adds some space around the avatar */
   object-fit: cover; /* Ensures the image fits within the circular shape */
+  align-items: center;
 }
 
 .info-container {
@@ -41,21 +42,4 @@
   margin-right: 5px;
   font-size: 18px;
   color: inherit; /* Inherit the original icon color */
-}
-
-/* Optional: If you want to manually set icon colors */
-.social-links i.fa-linkedin {
-  color: #0A66C2; /* LinkedIn blue */
-}
-
-.social-links i.fa-bluesky {
-  color: #3088d4; /* Mastodon blue */
-}
-
-.social-links i.fa-github {
-  color: #181717; /* GitHub dark gray, but you can use #fff if needed */
-}
-
-.social-links i.fa-youtube {
-  color: #FF0000; /* YouTube red */
 }
