--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-{% seo %}
+    {% seo %}
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
     <script src="{{ '/assets/js/respond.js' | relative_url }}"></script>
@@ -15,6 +14,7 @@
     <link rel="stylesheet" href="{{ '/assets/css/ie.css' | relative_url }}">
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     {% include head-custom.html %}
   </head>
   <body>
@@ -23,11 +23,20 @@
 
       <section>
         <div id="title">
-          <h1>{{ site.title | default: site.github.repository_name }}</h1>
-          <p>{{ site.description | default: site.github.project_tagline }}</p>
-          <hr>
-          <span class="credits left">Location: Hamar, Norway</a></span>
+          <h1>Trond Fasteraune</h1>
+          <img src="{{ '/images/trond.png' | relative_url }}" alt="Trond Fasteraune" class="avatar">
+          <p>Makes Video Games</p>
+          <div class="info-container">
+            <div class="location">Hamar, Norway</div>
+            <div class="social-links">
+              <a href="https://www.linkedin.com/in/trond-fasteraune-9203bb33a/" target="_blank"><i class="fa-brands fa-linkedin"></i> LinkedIn</a>
+              <a href="https://bsky.app/profile/polartron.bsky.social" target="_blank"><i class="fa-brands fa-bluesky"></i> Bluesky</a>
+              <a href="https://github.com/polartron/" target="_blank"><i class="fa-brands fa-github"></i> GitHub</a>
+              <a href="https://www.youtube.com/@GameDevPolarTron" target="_blank"><i class="fa-brands fa-youtube"></i> YouTube</a>
+            </div>
+          </div>
         </div>
+        <hr>
         {{ content }}
       </section>
     </div>
